--- a/views/journal.html
+++ b/views/journal.html
@@ -8,8 +8,12 @@ Esto será una guía resumida de lo que deberá reflejar tu ficha como mínimo p
 <br><b>— Troncal</b>: Elegir entre asginatura de simpatismo o asignatura de hechicería (explicados en el mapa)
 <br><b>— Materias favoritas</b>: (Sólo si eres alumno) Escoger 4. Son las asignaturas cuyas clases tu personaje no se perdería por nada del mundo.
 
-<br><b>— Amparo</b>: (Mándanos por MD <b>2</b> preferencias de tu espíritu protector basándote en la personalidad de tu personaje)<br><br>
-<i>Los admins evaluaremos la personalidad, si has decidido ponerla, y asignaremos al personaje en uno de los 4 clanes.</i>
+<br><b>— Amparo</b>: El espíritu protector asignado. Como desarrollar la personalidad en la ficha es opcional, puedes hacer dos cosas:
+<ul>
+    <li>Desarrollar la personalidad y en base a ella la administración decidimos cual es el espíritu (y por tanto el clan) asignado.</li>
+    <li>O mandarnos por MD a la administración <b>2</b> preferencias de tu espíritu protector, y de una de esas dos la administración escogería</li>
+</ul>
+<i>Estas dos elecciones no son excluyentes, aunque tengas desarrollada la personalidad puedes mandarnos dos preferencias si así lo deseas. Recuerda que el clan correspondiente a cada espíritu guardián están descritos en el mapa.</i>
 
 <!--<ul>
     <li>El aventurero (Zanark)</li>
@@ -18,7 +22,6 @@ Esto será una guía resumida de lo que deberá reflejar tu ficha como mínimo p
     <li>El observador (Eridan)</li>
 </ul>-->
 <br><br>
-<i>Recuerda que los espíritus están descritos en la ambientación y los clanes en el mapa. Si no lo tienes claro puedes pensar primero la personalidad y luego ver con cual encaja, o incluso dejarnos al staff decidir por ti en base a la personalidad de tu pj</i>
 
 
 <br><br><b>— Virtudes</b> 
