--- a/views/guides.html
+++ b/views/guides.html
@@ -9,7 +9,7 @@
             Fecha - 25 de Septiembre
             <br>Hora  - 17:30 (+00:00)
         <br><br>
-        Responde debajo con "Asistiré" si planeas participar ese día.
+        Responde debajo si planeas asistir ese día.
         </code>
 
         La cuenta madre siempre citará el encabezado de esos hilos y los colgará del fijado para que todo el mundo pueda estar al tanto de clases que se hayan programado.
