--- a/views/guides.html
+++ b/views/guides.html
@@ -3,7 +3,7 @@
 <div class="t2">Organizar clases</div>
     <br><br><b>
         Para organizar clases cada profesor debe iniciar un nuevo twit con un formato como el siguiente:
-        <br><br>
+        
         <code>CLASE DE HERBOLOGÍA
         <br><br>
             Fecha - 25 de Septiembre
@@ -12,9 +12,11 @@
         Responde debajo si planeas asistir ese día.
         </code>
 
-        La cuenta madre siempre citará el encabezado de esos hilos y los colgará del fijado para que todo el mundo pueda estar al tanto de clases que se hayan programado.
+        La idea es que cada miembro del fake que tenga intención de participar en la actividad elaborada por los profesores responda a dicho twit. La cuenta madre siempre citará el encabezado de esos hilos y los colgará del fijado para que todo el mundo pueda estar al tanto de clases que se hayan programado.
+        <br><br><i>Tratad de no hacer coincidir fechas para clases con las tramas globales del fake.</i>
     </b>
 <br><br>
+<div class="t2">Tirar dados</div>
 <!-- a -->
 <%- include(`./partials/bot-part.html`) %>
 
