--- a/views/guides.html
+++ b/views/guides.html
@@ -17,15 +17,22 @@
     </p>
 <br><br>
 <div class="t2">Tirar dados</div>
-Esto es una guía básica para el uso de los comando de los dados al mencionar a la cuenta de activades. Antes que nada, <b style="color: red">importantísimo:</b> A vecs el servidor que se encarga de lanzar dados se queda en reposo cuando pasa un tiempo que no es usa por eso, la primera vez que vayan a lanzar un dado en el día, antes de nada debéis de entrar en esta página: 
-<br><br>
-https://narysium-act.herokuapp.com/
-<br><br>
-Dicha página también esta en el perfil de la cuenta de actividades. Ahora, una vez explicado todo esto, comencemos con el uso del comando.
-<br><br>
-Lo primero, para activar la llamada de un dado se debe mencionar a la cuenta de actividades (@narysiumact) con el comando <b>!r</b>
-<br><br>
-Se pueden hacer 3 tipos de tirada:
+<p>
+    Esto es una guía básica para el uso de los comando de los dados al mencionar a la cuenta de activades. Antes que nada, <b style="color: red">importantísimo:</b> A vecs el servidor que se encarga de lanzar dados se queda en reposo cuando pasa un tiempo que no es usa por eso, la primera vez que vayan a lanzar un dado en el día, antes de nada debéis de entrar en esta página: 
+    <br><br>
+    https://narysium-act.herokuapp.com/
+    <br><br>
+    Dicha página también esta en el perfil de la cuenta de actividades. Ahora, una vez explicado todo esto, comencemos con el uso del comando.
+    <br><br>
+    Lo primero, para activar la llamada de un dado se debe mencionar a la cuenta de actividades (@narysiumact) con el comando <b>!r</b>
+    <br><br>
+    Se pueden hacer 3 tipos de tirada:
+    <ul>
+        <li>Tirada ventajosa</li>
+        <li>Tirada en desventaja</li>
+        <li>Tirada normal</li>
+    </ul>
+</p>
 <!-- a -->
 <%- include(`./partials/bot-part.html`) %>
 
