--- a/views/guides.html
+++ b/views/guides.html
@@ -8,11 +8,24 @@
         <br><br>
             Fecha - 25 de Septiembre
             <br>Hora  - 17:30 (+00:00)
+            <br>Hashtag - #ClassHerbNSR
         <br><br>
         Responde debajo si planeas asistir ese día.
         </code>
 
         La idea es que cada miembro del fake que tenga intención de participar en la actividad elaborada por los profesores responda a dicho twit. La cuenta madre siempre citará el encabezado de esos hilos y los colgará del fijado para que todo el mundo pueda estar al tanto de clases que se hayan programado.
+        <br><br>
+        Cada profesor puede hacer una lista de twitter con los miembros que decidan participar para que puedan tener una tl propia dedicada, esto es opcional, pero se recomienda.
+        <br><br>
+        Lo que si deben hacer es, cuando comience la actividad, utilizar el hashtag para rolear dicha actividad, por ejemplo.
+        <code>#ClassHerbNSR
+            <br><br>
+                Andaba distraído sin prestar demasiada antención a las indicaciones del profesor mientras nos guiaba por el bosque.
+            <br><br>
+            Responde debajo si planeas asistir ese día.
+            </code>
+
+
         <br><br><i>Tratad de no hacer coincidir fechas para clases con las tramas globales del fake.</i>
     </p>
 <br><br>
