--- a/views/guides.html
+++ b/views/guides.html
@@ -24,8 +24,7 @@
             <br><br>
             </code>
 
-
-        <br><br><i>Tratad de no hacer coincidir fechas para clases con las tramas globales del fake.</i>
+        <br><i>Tratad de no hacer coincidir fechas para clases con las tramas globales del fake.</i>
     </p>
 <br><br>
 <div class="t2">Tirar dados</div>
@@ -33,7 +32,7 @@
 <p>
     Esto es una guía básica para el uso de los comando de los dados al mencionar a la cuenta de activades. Antes que nada, <b style="color: red">importantísimo:</b> A vecs el servidor que se encarga de lanzar dados se queda en reposo cuando pasa un tiempo que no es usa por eso, la primera vez que vayan a lanzar un dado en el día, antes de nada debéis de entrar en esta página: 
     <br><br>
-    https://narysium-act.herokuapp.com/
+    <a href="https://narysium-act.herokuapp.com/">https://narysium-act.herokuapp.com/</a>"
     <br><br>
     Dicha página también esta en el perfil de la cuenta de actividades. Ahora, una vez explicado todo esto, comencemos con el uso del comando.
     <br><br>
