--- a/views/guides.html
+++ b/views/guides.html
@@ -30,7 +30,7 @@
 <div class="t2">Tirar dados</div>
 <br>
 <p>
-    Esto es una guía básica para el uso de los comando de los dados al mencionar a la cuenta de activades. Antes que nada, <b style="color: red">importantísimo:</b> A vecs el servidor que se encarga de lanzar dados se queda en reposo cuando pasa un tiempo que no es usa por eso, la primera vez que vayan a lanzar un dado en el día, antes de nada debéis de entrar en esta página: 
+    Esto es una guía básica para el uso de los comando de los dados al mencionar a la cuenta de activades. Antes que nada, <b style="color: red">importantísimo:</b> A veces el servidor que se encarga de lanzar dados se queda en reposo cuando pasa un tiempo que no es usa por eso, la primera vez que vayan a lanzar un dado en el día, antes de nada debéis de entrar en esta página: 
     <br><br>
     <a href="https://narysium-act.herokuapp.com/">https://narysium-act.herokuapp.com/</a>
     <br><br>
@@ -44,6 +44,8 @@
         <li>Tirada en desventaja</li>
         <li>Tirada normal</li>
     </ul>
+    Pero de momento olvidémonos de todo esto. En primer lugar, imagina que quieres tirar 2 dados de 20 caras, o 1 dado de 8 caras, pues dichas tiradas se harían de la siguiente manera.
+    <img src="/assets/dads/ej-dados-1.png">
 </p>
 <!-- a -->
 <%- include(`./partials/bot-part.html`) %>
