--- a/public/less/main.less
+++ b/public/less/main.less
@@ -47,6 +47,11 @@ a:hover {
 
 }
 
+.dados {
+    width: 70%!important;
+    display: block;
+}
+
 code {
     display: block;
     background: #2b2c3e;
