--- a/views/guides.html
+++ b/views/guides.html
@@ -30,7 +30,7 @@
 <div class="t2">Tirar dados</div>
 <br>
 <p>
-    Esto es una guía básica para el uso de los comando de los dados al mencionar a la cuenta de activades. Antes que nada, <b style="color: red">importantísimo:</b> A veces el servidor que se encarga de lanzar dados se queda en reposo cuando pasa un tiempo que no es usado, por eso, la primera vez que vayan a lanzar un dado en el día, antes de tirar nada, debéis de entrar en esta página: 
+    Esto es una guía básica para el uso de los comando de los dados al mencionar a la cuenta de activades. Antes que nada, <b style="color: red">importantísimo:</b> A veces el servidor que se encarga de lanzar dados se queda en reposo cuando pasa un tiempo que no es usado, por eso, la primera vez que vayan a lanzar un dado en el día, antes de tirar nada, debéis de entrar en esta página (luego podeis cerrarla si queréis, sólo es para que se espabile): 
     <br><br>
     <a href="https://narysium-act.herokuapp.com/">https://narysium-act.herokuapp.com/</a>
     <br><br>
