--- a/views/journal.html
+++ b/views/journal.html
@@ -63,7 +63,7 @@ Para tener una variedad dentro del fake controlamos que si existen muchos integr
 <b style="color: #188ca7">— Zanark (Abierto)<br></b>
 <b style="color:#188ca7">— Orion (Abierto)<br></b>
 <b style="color:#188ca7">— Cetus (Abierto)<br></b>
-<b style="color: red">— Eridan (Abierto)<br></b>
+<b style="color: #e2af1e">— Eridan (Abierto)<br></b>
 
 <%- include(`./partials/bot-part.html`) %>
 
