--- a/public/less/main.less
+++ b/public/less/main.less
@@ -197,9 +197,9 @@ thead {
     width: 300px;
 }
 
-#example_info {
+/*#example_info {
     display: none;
-}
+}*/
 
 #example_paginate {
     padding-top: 26px;
