--- a/views/map.html
+++ b/views/map.html
@@ -284,6 +284,7 @@
                 <br><br><b>— Historia</b>: Repasa los acontecimientos historicos transcurridos en el universo de Narysium.   
                 <br><br><b>— Transmutación</b>: La magia que conlleva la transformación física de las cosas. La animagia, el estudio de temas como la licantropía, volver el agua en vino, etc.  
                 <br><br><b>— Alquimia</b>: Corresponde a las artes de la síntesis de elementos de la naturaleza en pociones con diversos efectos mágicos. Los brebjaes de galenos, y preparación de venenos tabién están incluidos.
+                <br><br><b>— Exorcismo</b>: Comprende a todos conocimientos que giran entorno a la nigromancia, conocerlos y cómo lidiar contra ello. Como dice el dicho: Para vencer a tu enemigo debes pensar como él.
                 </p>
         `);
     });
@@ -361,7 +362,7 @@
 
             <br><br><br><p>Los mares de Narysium son los que más facilmente conectan con el resto del mundo, por tanto, la historia que los envuelve arrastra con ellos mitos y leyendas de origen humano.
             <br><br>
-            Tritones, sirenas, cecaeloias. Todas y cada unas de estas razas son las que gobiernas los mares y sus rincones, y cada una tiene un monarca supremo que los lidera. Este monarca supremo es reconocido como "tridentes".
+            Tritones, sirenas, cecaelias. Todas y cada unas de estas razas son las que gobiernas los mares y sus rincones, y cada una tiene un monarca supremo que los lidera. Este monarca supremo es reconocido como "tridentes".
             <br><br>
             Es sabido que las cecaelias y los tritones son enemigos acérrimos, y siempre están en guerra. La única nación de los tritones conocida es Scelendyr, un reino que acepta a todas las razas del mar conviviendo dentro de sus muros, y razón por la cual multiples conflictos ocurren entre cecaelias y tritones.
             <br><br>
