--- a/views/userlist.html
+++ b/views/userlist.html
@@ -35,9 +35,9 @@
                             <% } %> 
                             
                             <% if(ix["status"] == "activo") { %>
-                                <td style="background-color:#a9d8a9"><%= ix["dhm"] %> días</td>
+                                <td style="background-color:#a9d8a9"><%= ix["dhm"] %></td>
                             <% } else { %>
-                                <td style="background-color: #dac09c;"><%= ix["dhm"] %> días</td>
+                                <td style="background-color: #dac09c;"><%= ix["dhm"] %></td>
                             <% } %>     
                         </tr>
                     <% } %>
