--- a/views/journal.html
+++ b/views/journal.html
@@ -47,17 +47,17 @@ Para tener una variedad dentro del fake controlamos que si existen muchos integr
 
 <br><br><b>Profesorado</b><br><br>
 <b style="color: #188ca7">— Profesor de Simpatismo (Abierto)<br></b>
-<b style="color: #188ca7">— Profesor de Hechicería (Abierto)<br></b>
-<b style="color: #188ca7">— Profesor de Maref (Abierto)<br></b>
+<b style="color: red">— Profesor de Hechicería (Cerrado)<br></b>
+<b style="color:red">— Profesor de Maref (Cerradp)<br></b>
 <b style="color: #188ca7">— Profesor de Nominación (Abierto)<br></b>
 <b style="color: red">— Profesor de Criaturas mágicas (Cerrado)<br></b>
 <b style="color: #188ca7">— Profesor de Herbología (Abierto)<br></b>
 <b style="color: #188ca7">— Profesor de Artificería (Abierto)<br></b>
-<b style="color: #188ca7">— Profesor de Runología (Abierto)<br></b>
+<b style="color: red">— Profesor de Runología (Cerrado)<br></b>
 <b style="color:red">— Profesor de Mentalismo (Cerrado)<br></b>
 <b style="color: #188ca7">— Profesor de Historia (Abierto)<br></b>
 <b style="color: #188ca7">— Profesor de Transmutación (Abierto)<br></b>
-<b style="color: #188ca7">— Profesor de Alquimia (Abierto)<br></b>
+<b style="color: red">— Profesor de Alquimia (Abierto)<br></b>
 
 <br><br><b>Clanes</b><br><br>
 <b style="color: #188ca7">— Zanark (Abierto)<br></b>
