--- a/views/journal.html
+++ b/views/journal.html
@@ -37,33 +37,9 @@ Esto será una guía resumida de lo que deberá reflejar tu ficha como mínimo p
 <i>Aunque estas dos últimas sean opcionales es recomendable que tengas planteado incluirlas a la larga para conectar tu personaje mejor con la ambientación.</i>
 
 <div class="t2">Censo</div><br>
-Para tener una variedad dentro del fake controlamos que si existen muchos integrantes de un rqutipo no se abuse de este, por ello abrimos o cerramos rangos y clanes dependiendo de como esté el censo del mismo. Siempre decimos que queremos dar libertad, por ello seremos menos exigentes con el tema de los clanes, pero si que iremos cambiando más a menudo el tema de los rangos.
+Para tener una variedad dentro del fake controlamos que si existen muchos integrantes de un arqutipo no se abuse de este, por ello abrimos o cerramos rangos y clanes dependiendo de como esté el censo del mismo. Siempre decimos que queremos dar libertad, por ello seremos menos exigentes con el tema de los clanes, pero si que iremos cambiando más a menudo el tema de los rangos.
 
-<br><br><b>Rangos</b><br><br>
-<b style="color: #188ca7 ">— Neófito (Abierto)<br></b>
-<b style="color: #e2af1e">— Aprendiz (Abierto)<br></b>
-<b style="color: #e2af1e">— Veterano (Abierto)<br></b>
-<b style="color: red">— Maestro (Cerrado)<br></b>
-
-<br><br><b>Profesorado</b><br><br>
-<b style="color: #188ca7">— Profesor de Simpatismo (Abierto)<br></b>
-<b style="color: red">— Profesor de Hechicería (Cerrado)<br></b>
-<b style="color:red">— Profesor de Maref (Cerradp)<br></b>
-<b style="color: #188ca7">— Profesor de Nominación (Abierto)<br></b>
-<b style="color: red">— Profesor de Criaturas mágicas (Cerrado)<br></b>
-<b style="color: #188ca7">— Profesor de Herbología (Abierto)<br></b>
-<b style="color: #188ca7">— Profesor de Artificería (Abierto)<br></b>
-<b style="color: red">— Profesor de Runología (Cerrado)<br></b>
-<b style="color:red">— Profesor de Mentalismo (Cerrado)<br></b>
-<b style="color: #188ca7">— Profesor de Historia (Abierto)<br></b>
-<b style="color: #188ca7">— Profesor de Transmutación (Abierto)<br></b>
-<b style="color: red">— Profesor de Alquimia (Abierto)<br></b>
-
-<br><br><b>Clanes</b><br><br>
-<b style="color: #188ca7">— Zanark (Abierto)<br></b>
-<b style="color:#188ca7">— Orion (Abierto)<br></b>
-<b style="color:#188ca7">— Cetus (Abierto)<br></b>
-<b style="color: #e2af1e">— Eridan (Abierto)<br></b>
+<center><a href="https://docs.google.com/document/d/1RysqIqJYUT2qoFJD90A-DSgoXLhAwEYn1SvlXrFVXaQ/edit?usp=sharing"><div class="button">Censo</div></a></center><br>
 
 <%- include(`./partials/bot-part.html`) %>
 
