--- a/views/journal.html
+++ b/views/journal.html
@@ -24,8 +24,8 @@ Esto será una guía resumida de lo que deberá reflejar tu ficha como mínimo p
 <br><br>
 
 
-<br><br><b>— Virtudes</b> 
-<br><b>— Defectos</b>  
+<br><br><b>— Virtudes</b>: Aquello en lo que brillan, tanto en personalidad como en habilidades. 
+<br><b>— Defectos</b>: No abusar de defectos en la personalidad, incluir debilidades o campos que no manejen del todo bien 
 
 <br><br>
 <i>Puedes poner tantas virtudes como quieras, pero por cada una que añadas se debe elegir un defecto.</i>
@@ -38,7 +38,7 @@ Esto será una guía resumida de lo que deberá reflejar tu ficha como mínimo p
 
 <div class="t2">Censo</div><br>
 Para tener una variedad dentro del fake controlamos que si existen muchos integrantes de un arqutipo no se abuse de este, por ello abrimos o cerramos rangos y clanes dependiendo de como esté el censo del mismo. Siempre decimos que queremos dar libertad, por ello seremos menos exigentes con el tema de los clanes, pero si que iremos cambiando más a menudo el tema de los rangos.
-<br>
+<br><br>
 <center><a href="https://docs.google.com/document/d/1RysqIqJYUT2qoFJD90A-DSgoXLhAwEYn1SvlXrFVXaQ/edit?usp=sharing"><div class="button">Censo</div></a></center><br>
 
 <%- include(`./partials/bot-part.html`) %>
