--- a/views/guides.html
+++ b/views/guides.html
@@ -30,11 +30,7 @@
 <div class="t2">Tirar dados</div>
 <br>
 <p>
-    Esto es una guía básica para el uso de los comando de los dados al mencionar a la cuenta de activades. Antes que nada, <b style="color: red">importantísimo:</b> A veces el servidor que se encarga de lanzar dados se queda en reposo cuando pasa un tiempo que no es usado, por eso, la primera vez que vayan a lanzar un dado en el día, antes de tirar nada, debéis de entrar en esta página (luego podeis cerrarla si queréis, sólo es para que se espabile): 
-    <br><br>
-    <a href="https://narysium-act.herokuapp.com/">https://narysium-act.herokuapp.com/</a>
-    <br><br>
-    Dicha página también esta en el perfil de la cuenta de actividades. Ahora, una vez explicado todo esto, comencemos con el uso del comando.
+    Esto es una guía básica para el uso de los comando de los dados. 
     <br><br>
     Lo primero, para activar la llamada de un dado se debe mencionar a la cuenta de actividades (@narysiumact) con el comando <b>!r</b>
     <br><br>
