--- a/views/guides.html
+++ b/views/guides.html
@@ -58,6 +58,7 @@
 </p>
 
 <div class="t2">Sistema de combate</div>
+<br><br>
 <p>
     La idea del sistema de combate será simple. Será un sistema “a tres toques” conocido por este nombre en rol. Funciona de la siguiente manera:
     <br><br>
@@ -70,15 +71,15 @@
     </ul>
     Ejemplo:
     <code>
-        PJ1: “narra su intención de ataque 1-1” → Tira dado, Resultado: 14
-        PJ2: “narra su intención de ataque 2-1” → Tira dado, Resultado: 7
-
+        PJ1: “narra su intención de ataque 1-1” → Tira dado, Resultado: 14<br>
+        PJ2: “narra su intención de ataque 2-1” → Tira dado, Resultado: 7<br>
+        <br><br>
         No se hace ningún toque.
-
-        PJ1: “narra su éxito y su nueva intención de ataque 1-2” → Tira dado, Resultado: 4
-        PJ2: “narra su fracaso y su nueva intención de ataque 2-2” → Tira dado, Resultado: 17
-
-        PJ2 logra asestar un toque. 
+        <br><br>
+        PJ1: “narra su éxito y su nueva intención de ataque 1-2” → Tira dado, Resultado: 4<br>
+        PJ2: “narra su fracaso y su nueva intención de ataque 2-2” → Tira dado, Resultado: 17<br>
+        <br><br>
+        PJ2 logra asestar un toque.
     </code>
 
 </p>
