--- a/views/dormitorios.html
+++ b/views/dormitorios.html
@@ -1,17 +1,25 @@
 <%- include(`./partials/top-part.html`) %>
 <h1>Dormitorios</h1>
 <div class="t2">Dormitorio cutre</div>
-<center><img class="dados" src="/assets/dormitorios/cutre.png"></center>
+<center><img class="dormitorios" src="/assets/dormitorios/cutre.png"></center>
 <p>Lorem ipsum</p>
 <div class="t2">Dormitorio sencillo</div>
-<center><img class="dados" src="/assets/dormitorios/sencillo.png"></center>
+<center><img class="dormitorios" src="/assets/dormitorios/sencillo.png"></center>
 <p>Lorem ipsum</p>
 <div class="t2">Dormitorio lujoso</div>
 <p>Lorem ipsum</p>
 <div class="t2">Dormitorio VIP</div>
-<center><img class="dados" src="/assets/dormitorios/vip.jpg"></center>
+<center><img class="dormitorios" src="/assets/dormitorios/vip.jpg"></center>
 <p>Lorem ipsum</p>
 
+<style>
+.dormitorios {
+    display: block;
+    border: 24px solid #eaeaea;
+    box-shadow: 0px 0px 10px #d0d0d0;
+    margin: 22px 0px;
+}
+</style>
 <!-- a -->
 <%- include(`./partials/bot-part.html`) %>
 
