--- a/views/dormitorios.html
+++ b/views/dormitorios.html
@@ -7,6 +7,7 @@
 <center><img class="dormitorios" src="/assets/dormitorios/sencillo.png"></center>
 <p>Lorem ipsum</p>
 <div class="t2">Dormitorio lujoso</div>
+<center><img class="dormitorios" src="/assets/dormitorios/lujosa.jpg"></center>
 <p>Lorem ipsum</p>
 <div class="t2">Dormitorio VIP</div>
 <center><img class="dormitorios" src="/assets/dormitorios/vip.jpg"></center>
