--- a/views/guides.html
+++ b/views/guides.html
@@ -62,9 +62,9 @@
 <p>
     La idea del sistema de combate será simple. Será un sistema “a tres toques” conocido por este nombre en rol. Funciona de la siguiente manera:
     <br><br>
-    Cada contrincante narra un ataque de intenciones (lo que el personaje “intenta hacer”, muy distinto de “hacer”). Luego ambos se enfrentan tirando dados de 20 caras, y quien saque mayor número tiene éxito en su “intención”, teniendo el que sacó menos narrar su fracaso seguida de su siguiente intención, y quien sacase mayor número deberá narrar con éxito su primera intención seguida de su nueva intención de ataque.     
+    Cada contrincante narra un ataque de intenciones (lo que el personaje “intenta hacer”, muy distinto de “hacer”). Luego ambos se enfrentan tirando dados de "X" caras (que dependerá del rango del personaje), y quien saque mayor número tiene éxito en su “intención”, teniendo el que sacó menos narrar su fracaso seguida de su siguiente intención, y quien sacase mayor número deberá narrar con éxito su primera intención seguida de su nueva intención de ataque.     
     <ul>
-        <li>Gana el primero que llegue a 3 toques, los cuales sólo se aplican con una diferencia mayor o igual a 10 en los dados.</li>
+        <li>Gana el primero que llegue a 3 toques, los cuales sólo se aplican con una diferencia mayor o igual a 7 en los dados.</li>
         <li>Aquel que saque menor número 3 veces seguidas, pierde automáticamente el combate. (hayan recibido toques o no)</li>
         <li>Empatar dos 20: Ambos se hacen un toque.</li>
         <li>Empatar cualquier número inferior a 20: Ambos narran un fracaso y ninguno recibe un toque.</li>
@@ -81,6 +81,42 @@
         <br><br>
         PJ2 logra asestar un toque.
     </code>
+<br><br>
+Pero como se dijo antes, según el rango del personaje la cara con la que se tira el dado variará, así un Veterano no tendría la misma facilidad que un Profesor. Por ello, se tirará un dado distinto como se ve a continuación.a1
+
+<!-- Neófito -->
+<table>
+    <thead>
+        <tr>
+          <th colspan="2">Neófito</th>
+        </tr>
+        <tr>
+            <th colspan="2">1d10</th>
+        </tr>
+        <tr>
+            <th>Ptos. de Clase</th>
+            <th>Modificador</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+            <th>10</th>
+            <th>+1</th>
+        </tr>
+        <tr>
+            <th>20</th>
+            <th>+2</th>
+        </tr>
+        <tr>
+            <th>30</th>
+            <th>+3</th>
+        </tr>
+        <tr>
+            <th colspan="2">Mod=PC/10</th>
+        </tr>
+      </tbody>
+</table>
+
 
 </p>
 
