--- a/views/guides.html
+++ b/views/guides.html
@@ -90,15 +90,20 @@ Pero como se dijo antes, según el rango del personaje la cara con la que se tir
         <tr>
           <th colspan="2">Neófito</th>
         </tr>
+    </thead>
+    <tbody>
         <tr>
             <th colspan="2">1d10</th>
         </tr>
+    </tbody>
+    <thead>
         <tr>
             <th>Ptos. de Clase</th>
             <th>Modificador</th>
         </tr>
-      </thead>
-      <tbody>
+    </thead>
+
+    <tbody>
         <tr>
             <th>10</th>
             <th>+1</th>
@@ -114,7 +119,7 @@ Pero como se dijo antes, según el rango del personaje la cara con la que se tir
         <tr>
             <th colspan="2">Mod=PC/10</th>
         </tr>
-      </tbody>
+    </tbody>
 </table>
 
 
