--- a/views/guides.html
+++ b/views/guides.html
@@ -85,17 +85,8 @@
 Pero como se dijo antes, según el rango del personaje la cara con la que se tira el dado variará, así un Veterano no tendría la misma facilidad que un Profesor. Por ello, se tirará un dado distinto como se ve a continuación.a1
 
 <!-- Neófito -->
+<h2>Neófito (1d10)</h2>
 <table>
-    <thead>
-        <tr>
-          <th colspan="2">Neófito</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <th colspan="2">1d10</th>
-        </tr>
-    </tbody>
     <thead>
         <tr>
             <th>Ptos. de Clase</th>
