--- a/views/guides.html
+++ b/views/guides.html
@@ -89,8 +89,8 @@ Pero como se dijo antes, según el rango del personaje la cara con la que se tir
 <table>
     <thead>
         <tr>
-            <th>Ptos. de Clase</th>
-            <th>Modificador</th>
+            <th>PC</th>
+            <th>Mod</th>
         </tr>
     </thead>
 
