--- a/views/guides.html
+++ b/views/guides.html
@@ -82,10 +82,14 @@
         PJ2 logra asestar un toque.
     </code>
 <br><br>
-Pero como se dijo antes, según el rango del personaje la cara con la que se tira el dado variará, así un Veterano no tendría la misma facilidad que un Profesor. Por ello, se tirará un dado distinto como se ve a continuación.a1
-
+Pero como se dijo antes, según el rango del personaje la cara con la que se tira el dado variará, así un Veterano no tendría la misma facilidad que un Profesor. Por ello, se tirará un dado distinto como se ve a continuación.
+<br><br>
 <!-- Neófito -->
+Los modificadores se pueden deducir en base a los Puntos de Clase (PC).
+<code>Mod = PC/10</code>
+
 <h2>Neófito (1d10)</h2>
+<br><br>
 <table>
     <thead>
         <tr>
@@ -108,7 +112,7 @@ Pero como se dijo antes, según el rango del personaje la cara con la que se tir
             <th>+3</th>
         </tr>
         <tr>
-            <th colspan="2">Mod=PC/10</th>
+            <th colspan="2">...</th>
         </tr>
     </tbody>
 </table>
