--- a/views/guides.html
+++ b/views/guides.html
@@ -87,14 +87,11 @@ Pero como se dijo antes, según el rango del personaje la cara con la que se tir
 <!-- Neófito -->
 Los modificadores se pueden deducir en base a los Puntos de Clase (PC).
 <code>Mod = PC/10</code>
-
-<h2>Neófito (1d10)</h2>
-<br><br>
 <table>
     <thead>
         <tr>
-            <th>PC</th>
-            <th>Mod</th>
+            <th style="padding: 2px 21px;">PC</th>
+            <th style="padding: 2px 21px;">Mod</th>
         </tr>
     </thead>
 
@@ -116,6 +113,16 @@ Los modificadores se pueden deducir en base a los Puntos de Clase (PC).
         </tr>
     </tbody>
 </table>
+
+<h2>Dados de clase</h2>
+<ul>
+    <li>Neófito: 1d10</li>
+    <li>Aprendiz : 1d20</li>
+    <li>Veterano: 1d30</li>
+    <li>Maestro: 1d40</li>
+    <li>Profesor: 1d50</li>
+</ul>
+
 
 
 </p>
