--- a/views/guides.html
+++ b/views/guides.html
@@ -87,7 +87,7 @@ Pero como se dijo antes, según el rango del personaje la cara con la que se tir
 <!-- Neófito -->
 Los modificadores se pueden deducir en base a los Puntos de Clase (PC).
 <code>Mod = PC/10</code>
-<table>
+<center><table>
     <thead>
         <tr>
             <th style="padding: 2px 21px;">PC</th>
@@ -112,7 +112,7 @@ Los modificadores se pueden deducir en base a los Puntos de Clase (PC).
             <th colspan="2">...</th>
         </tr>
     </tbody>
-</table>
+</table></p></center>
 
 <h2>Dados de clase</h2>
 <ul>
