--- a/views/guides.html
+++ b/views/guides.html
@@ -97,24 +97,24 @@ Los modificadores se pueden deducir en base a los Puntos de Clase (PC).
 
     <tbody>
         <tr>
-            <th>10</th>
-            <th>+1</th>
+            <th style="text-align: center;">10</th>
+            <th style="text-align: center;">+1</th>
         </tr>
         <tr>
-            <th>20</th>
-            <th>+2</th>
+            <th style="text-align: center;">20</th>
+            <th style="text-align: center;">+2</th>
         </tr>
         <tr>
-            <th>30</th>
-            <th>+3</th>
+            <th style="text-align: center;">30</th>
+            <th style="text-align: center;">+3</th>
         </tr>
         <tr>
-            <th colspan="2">...</th>
+            <th style="text-align: center;" colspan="2">...</th>
         </tr>
     </tbody>
 </table></p></center>
 
-<h2>Dados de clase</h2>
+<h2>Dados según el rango</h2>
 <ul>
     <li>Neófito: 1d20</li>
     <li>Aprendiz : 1d25</li>
