--- a/views/guides.html
+++ b/views/guides.html
@@ -69,15 +69,17 @@
         <li>Empatar dos 20: Ambos se hacen un toque.</li>
         <li>Empatar cualquier número inferior a 20: Ambos narran un fracaso y ninguno recibe un toque.</li>
     </ul>
-    Ejemplo:
+    Ejemplo: 
     <code>
-        PJ1: “narra su intención de ataque 1-1” → Tira dado, Resultado: 14<br>
-        PJ2: “narra su intención de ataque 2-1” → Tira dado, Resultado: 7<br>
+        PJ1 es un Neófito y PJ2 un Aprendiz
+
+        PJ1: “narra su intención de ataque 1-1” → Tira dado (1d20), Resultado: 14<br>
+        PJ2: “narra su intención de ataque 2-1” → Tira dado (1d25), Resultado: 7<br>
         <br><br>
         No se hace ningún toque.
         <br><br>
-        PJ1: “narra su éxito y su nueva intención de ataque 1-2” → Tira dado, Resultado: 4<br>
-        PJ2: “narra su fracaso y su nueva intención de ataque 2-2” → Tira dado, Resultado: 17<br>
+        PJ1: “narra su éxito y su nueva intención de ataque 1-2” → Tira dado (1d20), Resultado: 4<br>
+        PJ2: “narra su fracaso y su nueva intención de ataque 2-2” → Tira dado (1d25), Resultado: 17<br>
         <br><br>
         PJ2 logra asestar un toque.
     </code>
