--- a/views/guides.html
+++ b/views/guides.html
@@ -62,13 +62,18 @@
 <p>
     La idea del sistema de combate será simple. Será un sistema “a tres toques” conocido por este nombre en rol. Funciona de la siguiente manera:
     <br><br>
-    Cada contrincante narra un ataque de intenciones (lo que el personaje “intenta hacer”, muy distinto de “hacer”). Luego ambos se enfrentan tirando dados de "X" caras (que dependerá del rango del personaje), y quien saque mayor número tiene éxito en su “intención”, teniendo el que sacó menos narrar su fracaso seguida de su siguiente intención, y quien sacase mayor número deberá narrar con éxito su primera intención seguida de su nueva intención de ataque.     
+    Cada contrincante narra un ataque de intenciones (lo que el personaje “intenta hacer”, muy distinto de “hacer”). Luego ambos se enfrentan tirando dados de "X" caras (que dependerá del rango del personaje), y quien saque mayor número tiene éxito en su “intención”. 
+    <br><br>
+    El que sacó menos debe narrar su fracaso seguido de su siguiente intención, y quien sacase mayor número deberá narrar con éxito su primera intención seguida de su nuevo ataque.    
+    <br><br>
     <ul>
         <li>Gana el primero que llegue a 3 toques, los cuales sólo se aplican con una diferencia mayor o igual a 7 en los dados.</li>
         <li>Aquel que saque menor número 3 veces seguidas, pierde automáticamente el combate. (hayan recibido toques o no)</li>
         <li>Empatar dos 20: Ambos se hacen un toque.</li>
         <li>Empatar cualquier número inferior a 20: Ambos narran un fracaso y ninguno recibe un toque.</li>
     </ul>
+    <b>¡Ojo! Sacar más que el otro no te asegura el toque, sólo una acción exitosa, el toque se aplica sacando una diferencia igual o mayor a 7.</b>
+    <br><br>
     Ejemplo: 
     <code>
         PJ1 es un Neófito y PJ2 un Aprendiz
