--- a/views/guides.html
+++ b/views/guides.html
@@ -69,8 +69,9 @@
     <ul>
         <li>Gana el primero que llegue a 3 toques, los cuales sólo se aplican con una diferencia mayor o igual a 7 en los dados.</li>
         <li>Aquel que saque menor número 3 veces seguidas, pierde automáticamente el combate. (hayan recibido toques o no)</li>
-        <li>Empatar dos 20: Ambos se hacen un toque.</li>
-        <li>Empatar cualquier número inferior a 20: Ambos narran un fracaso y ninguno recibe un toque.</li>
+        <li>Crítico: Sacar la última cara de tu dado es un toque asegurado (ejemplo: cara 20 en el dado d20).</li>
+        <li>Si ambos sacan un Crítico: Ambos se hacen un toque.</li>
+        <li>Empatar cualquier número que no sea el Crítico: Ambos narran un fracaso y ninguno recibe un toque.</li>
     </ul>
     <b>¡Ojo! Sacar más que el otro no te asegura el toque, sólo una acción exitosa, el toque se aplica sacando una diferencia igual o mayor a 7.</b>
     <br><br>
@@ -123,11 +124,11 @@ Los modificadores se pueden deducir en base a los Puntos de Clase (PC).
 
 <h2>Dados según el rango</h2>
 <ul>
-    <li>Neófito: 1d20</li>
-    <li>Aprendiz : 1d25</li>
-    <li>Veterano: 1d30</li>
-    <li>Maestro: 1d35</li>
-    <li>Profesor: 1d40</li>
+    <li>Neófito: 1d20 (Crítico: 20)</li>
+    <li>Aprendiz : 1d25 (Crítico: 25)</li>
+    <li>Veterano: 1d30 (Crítico: 30)</li>
+    <li>Maestro: 1d35 (Crítico: 35)</li>
+    <li>Profesor: 1d40 (Crítico: 39 y 40)</li>
 </ul>
 
 
