--- a/views/dormitorios.html
+++ b/views/dormitorios.html
@@ -2,16 +2,16 @@
 <h1>Dormitorios</h1>
 <div class="t2">Dormitorio cutre</div>
 <center><img class="dormitorios" src="/assets/dormitorios/cutre.png"></center>
-<p>Lorem ipsum</p>
+<p>Los dormitorios más humildes de la academia. Tiene el mínimo de las cosas para que una habitación sea una habitación, pero eso no quiere decir que cumpla con lo acogedor. Son los únicos dormitorios cuyos duendes no pasan a a limpiar gradualmente y son aquellas asignadas a los estudiantes sin clan conocidos como ignotos.</p>
 <div class="t2">Dormitorio sencillo</div>
 <center><img class="dormitorios" src="/assets/dormitorios/sencillo.png"></center>
-<p>Lorem ipsum</p>
+<p>Los dormitorios comunes, algo más acogedores que los anteriores disponen de calefacción con un sistema de ventilación diseñado por artfcería barato, pues a veces se avería, pero de resto es como cualquier habitación que un estudiante de residenci podría tener. Todos los clanes disfrutan de habitaciones sencillas.</p>
 <div class="t2">Dormitorio lujoso</div>
 <center><img class="dormitorios" src="/assets/dormitorios/lujosa.jpg"></center>
-<p>Lorem ipsum</p>
+<p>Asignados siempre al clan ganador. En prinipio podría verse más antiguo que el sencillo, pero sus mantas son más sedosas y la calefacción funciona con alta tecnología de artificría. Dispone de una esfera holográfica para ver ciertas partes de narysium a través de ella, con límites, dispone de estanterías para huardar más libros del archivo que en las anteriores habitaciones.</p>
 <div class="t2">Dormitorio VIP</div>
 <center><img class="dormitorios" src="/assets/dormitorios/vip.jpg"></center>
-<p>Lorem ipsum</p>
+<p>Todo cuanto tiene la habitación lujosa, más y mejor. Además de estar dotado de de increíbles aparatos de artificería tiene netflix, porque el rector es un moderno y sabe como sintonizar con el mundo humano, un acuario propio, servicio de habitaciones, jacuzzi, etc. Hospedarse en un hotel de cinco estrellas se queda corto.</p>
 
 <style>
 .dormitorios {
