--- a/views/index.html
+++ b/views/index.html
@@ -25,6 +25,7 @@
     <br>
     <center><a href="/map"><div class="button">Ir al mapa</div></a></center><br>
     <center><a href="/guides"><div class="button">Guías</div></a></center><br>
+    <center><a href="/dormitorios"><div class="button">Guías</div></a></center><br>
 </p>
 
 
